Correct a few things

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p class="time">1 week ago</p>
         </div>
         <div class="commented-image">
-          <img src="./assets/images/image-chess.webp" alt="" srcset="">
+          <img src="./assets/images/image-chess.webp" alt="">
         </div>
       </div>
       <div class="single-card">
